# task-manager-tauri

./: index.html  package-lock.json  package.json
files/: clients.csv  projects.csv
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: interface.rs  mod.rs  usecase.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/businesslogic/: mod.rs  project_file.rs
src-tauri/src/domain/models/: mod.rs  project.rs
src-tauri/src/models/: client.rs  project.rs
src-tauri/src/repositories/: file_repository.rs  mod.rs  repository_trait.rs
src/components/: Calendar.tsx  LocalizedDatePicker.tsx  MultiSelect.tsx  Spacer.tsx  Theme.tsx
src/pages/Clients/: Clients.type.ts  ClientsListModal.tsx
src/pages/Projects/: ProjectModal.tsx  Projects.type.ts  ProjectsList.tsx  ProjectsList.type.ts
